Limiting parallax on mobile device fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,6 @@ html,body {
     height:84vh; 
     min-height:400px;
     background-size:cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-image:url("../img/IMG_0729.jpeg");
     background-attachment: fixed;
     background-position: 50% 50%;
@@ -38,7 +35,6 @@ html,body {
     background-attachment: fixed;
     background-repeat: no-repeat;
   
-    
 }
 
 /* changes to support iOS safari */
@@ -107,6 +103,10 @@ h2{
         position: relative;
         left: 36px; 
         margin:auto !important;     
+    }
+
+    #header, #firm {
+        background-attachment: local;
     }
 }
 
